(ui) Fix some issues with high contrast theme

--- a/src/app/features/users/pages/gallery/user-gallery-navigation.component.scss
+++ b/src/app/features/users/pages/gallery/user-gallery-navigation.component.scss
@@ -29,12 +29,12 @@
       white-space: nowrap;
 
       &.active {
-        color: var(--white);
+        color: var(--textOnAccentColor);
       }
 
       &:not(.active):hover {
         background: none;
-        color: var(--accentColor);
+        color: var(--white);
       }
 
       .dropdown {
