--- a/src/app/shared/components/misc/avatar/avatar.component.scss
+++ b/src/app/shared/components/misc/avatar/avatar.component.scss
@@ -25,7 +25,7 @@ img {
   align-items: center;
   justify-content: center;
   background: var(--successColor);
-  color: var(--white);
+  color: var(--textOnSuccessColor);
   font-size: .75rem;
   border-radius: 50%;
   border: 1px solid var(--white);
